# qgis-plugin-tianditu

./: build.bat  build.sh  package.json  pyproject.toml  update_ui.py
.github/workflows/: commit.yml  pylint.yml  release.yml
tianditu_lite/: plugin.py
tianditu_tools/: compat.py  metadata.txt  plugin.py  qgis_utils.py  utils.py
tianditu_tools/Styles/: terrain.qml
tianditu_tools/maps/: extra.yml  summary.yml  tianditu_province.yml
tianditu_tools/ui/: sd.py  sd.ui  sd_6.py  search.py  search.ui  search_6.py  setting.py  setting.ui  setting_6.py
tianditu_tools/widgets/: toolbar.py
tianditu_tools/widgets/AddMap/: extra_map.py  main.py  sd.py  utils.py
tianditu_tools/widgets/Search/: main.py  searchDock.py
tianditu_tools/widgets/Setting/: dialog.py  main.py  mapmanager.py
